# spade_rpc

./: .readthedocs.yml  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  readthedocs.yml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: build-uv-cache.yml  python-package.yml  test-linux-with-coverage.yml  test-macos.yml  test-windows.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
examples/: simple_call.py
examples/dfagent/: dfagent.py  example.py
examples/mixture/: classifiers.py  example.py
spade_rpc/: __init__.py  rpc.py
tests/: test_rpc_component.py  test_spade_rpc.py
