[build-system]
requires = [
    "setuptools>=77.0.0",
    "wheel"
    ]
build-backend = "setuptools.build_meta"

[project]
name = "spade-rpc"
dynamic = ["version"]
dependencies = ["spade>=4.1.4"]
description = "Plugin for SPADE platform to implement rpc protocol on agents"
authors = [
    {name = "Nicolás Garcia", email = "n.garcia.sastre@gmail.com"},
    {name = "Javi Palanca", email = "jpalanca@gmail.com" }
]
maintainers = [{ name = "Javi Palanca", email = "jpalanca@gmail.com" }]
license = "MIT"
readme = "README.rst"
keywords = ["spade_rpc"]
requires-python = ">=3.10, <=3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: XMPP"
]

[project.optional-dependencies]
dev = [
    "pyjabber>=0.4.5",
    "bump2version==1.0.1",
    "wheel==0.45.1",
    "watchdog==2.1.9",
    "ruff==0.3.3",
    "tox==4.23.2",
    "coverage==7.2.1",
    "twine==6.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==5.0.0"
]

docs = [
    "Sphinx==6.0.0",
    "sphinx_rtd_theme==3.1.0",
]

[project.urls]
"Homepage" = "https://spadeagents.eu/plugins/spade-rpc"
"Repository" = "https://github.com/javipalanca/spade_rpc"
"Documentation" = "https://spade-artifact.readthedocs.io"
"Bug Tracker" = "https://github.com/javipalanca/spade_rpc/issues"

[tool.setuptools]
packages = ["spade_rpc"]
#include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "spade_rpc.__version__"}

[tool.ruff]
lint.select = ["E", "F"]
lint.ignore = ["E501"]
line-length = 88
target-version = "py38"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["spade_rpc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
